--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,6 @@
 /web/var
 /web/.htaccess
 composer.phar
-composer.lock
 .buildpath
 .project
 .settings/
@@ -49,3 +48,7 @@ behat.yml
 .php_cs.cache
 auth.json
 ide-twig.json
+/bin/doctrine-dbal
+/bin/php-parse
+/bin/security-checker
+/web/fonts/
