--- a/app/config/default_parameters.yml
+++ b/app/config/default_parameters.yml
@@ -9,7 +9,7 @@ parameters:
     mailer_password:   ~
 
     # One of `legacy` (default) or `solr`
-    search_engine: legacy
+    search_engine: solr
 
     # Solr root endpoint, relevant if `solr` is set as search_engine
     solr_dsn: http://localhost:8983/solr
@@ -53,7 +53,7 @@ parameters:
 
     # number of images displayed per page
     app.gallery.images_limit: 6
-    
+
     # Settings for Cache pool, to create your own pool see cache/ folder.
     cache_pool: "default"
 
