--- a/src/EzSolrWorkshopBundle/Resources/config/services.yml
+++ b/src/EzSolrWorkshopBundle/Resources/config/services.yml
@@ -3,6 +3,28 @@ imports:
 
 parameters:
     ezpublish.persistence.field_type_registry.class: EzSolrWorkshopBundle\Core\Persistence\FieldTypeRegistry
+    ezpublish.search.common.field_name_generator.map:
+        ez_integer: 'i'
+        ez_minteger: 'mi'
+        ez_id: 'id'
+        ez_mid: 'mid'
+        ez_string: 's'
+        ez_mstring: 'ms'
+        ez_long: 'l'
+        ez_text: 't'
+        ez_html: 'h'
+        ez_boolean: 'b'
+        ez_mboolean: 'mb'
+        ez_float: 'f'
+        ez_double: 'd'
+        ez_date: 'dt'
+        ez_point: 'p'
+        ez_currency: 'c'
+        ez_geolocation: 'gl'
+        ez_document: 'doc'
+        ez_fulltext: 'fulltext'
+        ez_case_sensitive_string: 'css'
+    ezpublish.fieldType.indexable.ezstring.class: EzSolrWorkshopBundle\Core\FieldType\TextLine\SearchField
 
 services:
     ezsolr.controller.workshop:
